# Thermally_driven_flow_Semester_thesis

./: CMakeLists.txt  README.md  install instructions.txt
cmake/: BuildSrcFolderGenericLists.txt  FindEigen3.cmake  FindNetCDF4.cmake
cmd/: CMakeLists.txt  ImportantPart.cpp  ImportantPart.hpp  valley_cmd.cpp
core/: CMakeLists.txt  CoordinateTransform.hpp  ISampleField.hpp  ImportantPart.cpp  ImportantPart.hpp  LagrantoUVW.cpp  LagrantoUVW.hpp  Math.hpp  NetCDF.cpp  NetCDF.hpp  ParticleTracer.cpp  ParticleTracer.hpp  RegularGrid.hpp  RlonRlatHField.cpp  RlonRlatHField.hpp  TimeRelatedFields.hpp  TrajectoryData.hpp  UVWReader.cpp  UVWReader.hpp
mt_template/: abstract.tex  apx-sample-appendix.tex  ch01-introduction.tex  ch02-background.tex  ch02-related-work.tex  ch03-method.tex  ch03-more-chapters.tex  ch04-results.tex  ch05-conclusion.tex  graphics.bib  preamble.tex  thesis.tex
mt_template/figures/: IgeaNarrowBand.eps  voldiff_ui.eps
prog03_volren/: CMakeLists.txt  prog03.cpp
viewer/: CMakeLists.txt
viewer/resources/: resources_app.qrc
viewer/src/: MainWindow.cpp  MainWindow.h  SceneWidget.cpp  SceneWidget.h  main.cpp
